# hyper-grapher

./: CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/include/: entity.h  hyper_edge.h  hyper_graph.h  meta_edge.h  node.h
core/model/include/: directional_hyper_edge.h  entity.h  hyper_edge.h  hyper_graph.h  meta_edge.h  node.h
core/model/src/: directional_hyper_edge.cpp  hyper_graph.cpp
core/src/: hyper_graph.cpp
gui/: CMakeLists.txt
gui/hyper_graph_view/include/: hyper_graph_scene.h  hyper_graph_view.h
gui/hyper_graph_view/src/: hyper_graph_scene.cpp  hyper_graph_view.cpp
gui/items/include/: edge_item.h  node_item.h  procedural_edge.h  procedural_node.h  procedural_view.h
gui/items/src/: edge_item.cpp  node_item.cpp  procedural_view.cpp
gui/layout_algorithms/include/: edge_attraction.h  layout.h  node_repulsion_edge_attraction.h
gui/layout_algorithms/src/: edge_attraction.cpp  node_repulsion_edge_attraction.cpp
gui/main_window/include/: main_window.h
gui/main_window/src/: main_window.cpp
